--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,12 @@
 <body>
 
 <h1>Hello world!</h1>
-<div><img src="images/variant-09.jpg" alt="Hello World from Space"
-          style="width:100%;max-width:960px"></div>
+<div>
+    <img src="images/variant-09.jpg" alt="Hello World from Space" style="width:100%; max-width:4000px;">
+</div>
+
+
+
 <p>This is the first file in my new Git Repo.</p>
 
 </body>
