--- a/app/index.html
+++ b/app/index.html
@@ -3,18 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <title>Aboba</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="shortcut icon" href ="https://s1.iconbird.com/ico/2013/11/493/w256h2561384699870ico.png" type="image/x-icon">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="container">
 
-<h1>Hello world!</h1>
-<div>
-    <img src="images/variant-09.jpg" alt="Hello World from Space" style="width:100%; max-width:4000px;">
+<div class="row gx-5">
+<section class="col-6">
+    <div class="row">
+        <div class="col">
+        <img src="images/image_Lab.png" alt="Hello World from Space" style="width:100%; max-width:500px;">
+        </div>
+    </div>
+</section>
+<div class="col-6">
+    <header class ="row" >
+        <h1>Jhon <strong>Abirar</strong></h1>
+        <hr>
+        <span>UI Designer</span>
+    </header>
+
+    <article class ="row">
+        <h2><strong>Contact info_</strong></h2>
+        <ul>
+            <li>
+                Phone: +000 132 456 789
+            </li>
+            <li> Email: uname@gmail.com</li>
+            <li> Area: Your Street Address Here</li>
+        </ul>
+    </article>
+    <article class="row">
+        <h1><strong>Education_</strong></h1>
+        <ul>
+            <li>Enter Your Major
+                Name Of Your University
+                2005–2009</li>
+            <li>Enter Your Major
+                Name Of Your University
+                2009–2011</li>
+        </ul>
+    </article>
+</div>
+ </div>
+
+
+
+<div class ="row">
+
+   <div class="col">
+    <h2><strong>About me_</strong></h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo</p>
+
+</div>
+
+<article class="col">
+    <h2><strong>Experience_</strong></h2>
+    <ul>
+        <li>Enter Job Position Here
+            Present
+            Company Name / Location
+            Lorem ipsum dolor sit amet, this is a theme consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
+        </li>
+        <li>Enter Job Position Here
+            2017–2019
+            Company Name / Location
+            Lorem ipsum dolor sit amet, this is a theme consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
+        </li>
+    </ul>
+</article>
+
 </div>
 
 
+<div class="row">
+    <div class ="col">
+    <h2><strong>Hobbies_</strong></h2>
+    </div>
 
-<p>This is the first file in my new Git Repo.</p>
 
+    <article class="col">
+
+        <h2><strong>Expertise_</strong></h2>
+        <div>
+            <div></div>
+            <p>Adobe Photoshop</p>
+            <p> Adobe Illustrator</p>
+            Adobe XD
+            Power Point
+        </div>
+    </article>
+
+
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
