Виправлена структура і розмітка

--- a/app/index.html
+++ b/app/index.html
@@ -2,76 +2,117 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Aboba</title>
+    <title>Hu Tao THE BEST!!!!</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" href ="https://s1.iconbird.com/ico/2013/11/493/w256h2561384699870ico.png" type="image/x-icon">
+    <link rel="shortcut icon" href ="https://i.redd.it/6nqh27dio1rb1.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.css">
-</head>
-<body class="container">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 
-<div class="row gx-5">
-<section class="col-6">
-    <div class="row">
-        <div class="col">
-        <img src="images/image_Lab.png" alt="Hello World from Space" style="width:100%; max-width:500px;">
+    <link rel="stylesheet" href="css/style.min.css">
+
+
+
+</head>
+<body class="container ">
+
+<div class="row gx-5 justify-content-center">
+    <!-- Колонка с изображением -->
+    <section class="col-lg-4 col-md-5 col-sm-12">
+        <div class="Pic YelBG">
+            <img src="images/image_lab.png" alt="Hello World from Space">
+        </div>
+    </section>
+
+    <!-- Колонка с текстом -->
+    <div class="col-lg-5 col-md-7 col-sm-12">
+        <header class="header-content">
+            <h1>Jhon <strong>Abirar</strong></h1>
+            <hr class="yellow-line">
+            <span class="subtitle">UI Designer</span>
+        </header>
+
+
+
+    <article class="contact-info">
+        <h2><strong>Contact info_</strong></h2>
+
+        <div class="row gx-5">
+            <div class="col-md-4">
+                <span class="contact-label">Phone</span><br>
+                <span class="contact-detail">+000 132 456 789</span>
+            </div>
+            <div class="col-md-4">
+                <span class="contact-label">Email</span><br>
+                <span class="contact-detail">uname@gmail.com</span>
+            </div>
+            <div class="col-md-4">
+                <span class="contact-label">Area</span><br>
+                <span class="contact-detail">Your Street Address Here</span>
+            </div>
+        </div>
+    </article>
+
+
+    <article class="education-section">
+        <h1><strong>Education_</strong></h1>
+        <div class="row gx-5">
+            <div class="col-md-6 education-block">
+                <span class="major">Enter Your Major</span>
+                <div class="university">
+                    <span class="years">2005–2009</span><br>
+                    Name Of Your University
+                </div>
+            </div>
+            <div class="col-md-6 education-block">
+                <span class="major">Enter Your Major</span>
+                <div class="university">
+                    <span class="years">2009–2011</span><br>
+                    Name Of Your University
+                </div>
+            </div>
+        </div>
+    </article>
+
+</div>
+</div>
+
+
+
+<div class ="row  gx-5 justify-content-center">
+
+    <div class="col-lg-4">
+        <div class="about-section bg">
+            <h2><strong>About me_</strong></h2>
+            <div class="about-description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo.
+            </div>
         </div>
     </div>
-</section>
-<div class="col-6">
-    <header class ="row" >
-        <h1>Jhon <strong>Abirar</strong></h1>
-        <hr>
-        <span>UI Designer</span>
-    </header>
-
-    <article class ="row">
-        <h2><strong>Contact info_</strong></h2>
-        <ul>
-            <li>
-                Phone: +000 132 456 789
-            </li>
-            <li> Email: uname@gmail.com</li>
-            <li> Area: Your Street Address Here</li>
-        </ul>
-    </article>
-    <article class="row">
-        <h1><strong>Education_</strong></h1>
-        <ul>
-            <li>Enter Your Major
-                Name Of Your University
-                2005–2009</li>
-            <li>Enter Your Major
-                Name Of Your University
-                2009–2011</li>
-        </ul>
-    </article>
-</div>
- </div>
 
 
-
-<div class ="row">
-
-   <div class="col">
-    <h2><strong>About me_</strong></h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo</p>
-
-</div>
-
-<article class="col">
+    <article class="col-lg-5">
     <h2><strong>Experience_</strong></h2>
     <ul>
-        <li>Enter Job Position Here
-            Present
-            Company Name / Location
-            Lorem ipsum dolor sit amet, this is a theme consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
+        <li class="job-item">
+            <div class="job-header">
+                <h4>Enter Job Position Here</h4>
+                <span class="job-dates present">Present</span>
+                <span class="job-company">Company Name / Location</span>
+            </div>
+            <p class="job-description">
+                Lorem ipsum dolor sit amet, this is a theme consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
+            </p>
         </li>
-        <li>Enter Job Position Here
-            2017–2019
-            Company Name / Location
-            Lorem ipsum dolor sit amet, this is a theme consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
+        <li class="job-item">
+            <div class="job-header">
+                <h4>Enter Job Position Here</h4>
+                <span class="job-dates present">2017–2019</span>
+                <span class="job-company">Company Name / Location</span>
+            </div>
+            <p class="job-description">
+                Lorem ipsum dolor sit amet, this is a theme consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
+            </p>
         </li>
     </ul>
 </article>
@@ -79,23 +120,75 @@
 </div>
 
 
-<div class="row">
-    <div class ="col">
-    <h2><strong>Hobbies_</strong></h2>
+<div class="row gx-5 justify-content-center">
+    <div class="col-lg-4">
+        <div class="bg">
+            <h2><strong>Hobbies_</strong></h2>
+            <div class="row text-center hobbies">
+                <div class="col-3">
+                    <i class="bi bi-airplane"></i>
+                    <p>Travel</p>
+                </div>
+                <div class="col-3">
+                    <i class="bi bi-music-note"></i>
+                    <p>Music</p>
+                </div>
+                <div class="col-3">
+                    <i class="bi bi-vector-pen"></i>
+                    <p>Writing</p>
+                </div>
+                <div class="col-3">
+                    <i class="bi bi-suit-club-fill"></i>
+                    <p>Chess</p>
+                </div>
+            </div>
+        </div>
     </div>
 
 
-    <article class="col">
 
-        <h2><strong>Expertise_</strong></h2>
-        <div>
-            <div></div>
-            <p>Adobe Photoshop</p>
-            <p> Adobe Illustrator</p>
-            Adobe XD
-            Power Point
+
+<article class="col-lg-5 expertise-section ">
+    <h2><strong>Expertise_</strong></h2>
+    <div class="row gx-3">
+        <div class="col-3 expertise-item">
+            <div class="circle">
+                <svg>
+                    <circle cx="50%" cy="50%" r="45"></circle>
+                    <circle class="progress" cx="50%" cy="50%" r="45"></circle>
+                </svg>
+                <p>Adobe Photoshop</p>
+            </div>
         </div>
-    </article>
+        <div class="col-3 expertise-item">
+            <div class="circle">
+                <svg>
+                    <circle cx="50%" cy="50%" r="45"></circle>
+                    <circle class="progress" cx="50%" cy="50%" r="45"></circle>
+                </svg>
+                <p>Adobe Illustrator</p>
+            </div>
+        </div>
+        <div class="col-3 expertise-item">
+            <div class="circle">
+                <svg>
+                    <circle cx="50%" cy="50%" r="45"></circle>
+                    <circle class="progress" cx="50%" cy="50%" r="45"></circle>
+                </svg>
+                <p>Adobe Indesign</p>
+            </div>
+        </div>
+        <div class="col-3 expertise-item">
+            <div class="circle">
+                <svg>
+                    <circle cx="50%" cy="50%" r="45"></circle>
+                    <circle class="progress" cx="50%" cy="50%" r="45"></circle>
+                </svg>
+                <p>Power Point</p>
+            </div>
+        </div>
+    </div>
+</article>
 
 
 </div>
