--- a/app/index.html
+++ b/app/index.html
@@ -6,75 +6,92 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" href ="https://i.redd.it/6nqh27dio1rb1.png" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
 
     <link rel="stylesheet" href="css/style.min.css">
 
 
 
 </head>
-<body class="container ">
+<body class="block ">
 
 <div class="row gx-5 justify-content-center">
     <!-- Колонка с изображением -->
     <section class="col-lg-4 col-md-5 col-sm-12">
         <div class="Pic YelBG">
-            <img src="images/image_lab.png" alt="Hello World from Space">
+            <img src="images/image01.png" alt="Hello World from Space ">
         </div>
     </section>
 
-    <!-- Колонка с текстом -->
-    <div class="col-lg-5 col-md-7 col-sm-12">
-        <header class="header-content">
-            <h1>Jhon <strong>Abirar</strong></h1>
-            <hr class="yellow-line">
-            <span class="subtitle">UI Designer</span>
-        </header>
+
+       <div class="col-lg-5 col-md-7 col-sm-12 ">
+           <div class =" row gy-lg-4 gy-md-4 gy-sm-4">
 
 
 
-    <article class="contact-info">
-        <h2><strong>Contact info_</strong></h2>
-
-        <div class="row gx-5">
-            <div class="col-md-4">
-                <span class="contact-label">Phone</span><br>
-                <span class="contact-detail">+000 132 456 789</span>
-            </div>
-            <div class="col-md-4">
-                <span class="contact-label">Email</span><br>
-                <span class="contact-detail">uname@gmail.com</span>
-            </div>
-            <div class="col-md-4">
-                <span class="contact-label">Area</span><br>
-                <span class="contact-detail">Your Street Address Here</span>
-            </div>
-        </div>
-    </article>
+           <header class="col-12 header-content pt-5 pb-lg-5 pb-md-3 text-black">
+               <h1>JHON <br> <strong>ABIRAR</strong></h1>
+               <hr class="yellow-line">
+               <span class="Data">UI DESIGNER</span>
+           </header>
 
 
-    <article class="education-section">
-        <h1><strong>Education_</strong></h1>
-        <div class="row gx-5">
-            <div class="col-md-6 education-block">
-                <span class="major">Enter Your Major</span>
-                <div class="university">
-                    <span class="years">2005–2009</span><br>
-                    Name Of Your University
-                </div>
-            </div>
-            <div class="col-md-6 education-block">
-                <span class="major">Enter Your Major</span>
-                <div class="university">
-                    <span class="years">2009–2011</span><br>
-                    Name Of Your University
-                </div>
-            </div>
-        </div>
-    </article>
 
-</div>
+           <article class="col-12 pb-lg-5 pb-md-3">
+               <h2 class="Artic text-black">CONTACT INFO_</h2>
+
+               <div class="row gx-5 pt-3 Data">
+                   <div class="col-md-4">
+
+                       <span class="text-black"><strong>PHONE</strong></span>
+                       <div class="pt-1">+000 132 456 789</div>
+
+                   </div>
+                   <div class="col-md-4 ">
+
+                       <span class="text-black"><strong>EMAIL</strong></span>
+                       <div class="pt-1 ">uname<wbr>@gmail.com</div>
+
+                   </div>
+                   <div class="col-md-4">
+
+                       <span class="text-black"><strong>AREA</strong></span>
+                       <div class="pt-1">Your Street Address Here</div>
+
+                   </div>
+               </div>
+           </article>
+
+
+           <article class="col-12 pb-lg-5 pb-md-3 pb-sm-2">
+               <h2 class="Artic text-black">EDUCATION_</h2>
+               <div class="row gx-5 pt-3">
+                   <div class="col-md-6 Data text-dark-gray">
+                       <span ><strong>ENTER YOUR MAJOR</strong></span><br>
+                       <div class="pt-2">
+                           <span >Name Of Your University</span> <br>
+                           <span >2005–2009</span>
+                       </div>
+
+                   </div>
+                   <div class="col-md-6 Data text-dark-gray">
+                       <span ><strong>ENTER YOUR MAJOR</strong></span><br>
+                       <div class="pt-2">
+                          <span >Name Of Your University</span><br>
+                           <span >2009–2011</span>
+                       </div>
+
+
+                   </div>
+               </div>
+           </article>
+
+
+       </div>
+
+   </div>
+
 </div>
 
 
@@ -82,9 +99,9 @@
 <div class ="row  gx-5 justify-content-center">
 
     <div class="col-lg-4">
-        <div class="about-section bg">
-            <h2><strong>About me_</strong></h2>
-            <div class="about-description">
+        <div class=" bg">
+            <h2 class="Artic text-black">ABOUT ME_</h2>
+            <div class="Text">
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo.
             </div>
         </div>
@@ -92,29 +109,32 @@
 
 
     <article class="col-lg-5">
-    <h2><strong>Experience_</strong></h2>
-    <ul>
-        <li class="job-item">
-            <div class="job-header">
-                <h4>Enter Job Position Here</h4>
-                <span class="job-dates present">Present</span>
-                <span class="job-company">Company Name / Location</span>
+    <h2 class="Exp Artic text-black">EXPERIENCE_</h2>
+
+        <div class="job-item col-lg">
+            <div >
+                <h4 class="text-dark-gray">Enter Job Position Here</h4>
+                <div class="Text"><span class="Bowl">Present</span>
+
+                    <span class="job-company">Company Name / Location</span></div>
+
             </div>
-            <p class="job-description">
+            <p class="Text text-light-gray">
                 Lorem ipsum dolor sit amet, this is a theme consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
             </p>
-        </li>
-        <li class="job-item">
+        </div>
+        <div class="job-item">
             <div class="job-header">
-                <h4>Enter Job Position Here</h4>
-                <span class="job-dates present">2017–2019</span>
-                <span class="job-company">Company Name / Location</span>
+                <h4 class="text-dark-gray">Enter Job Position Here</h4>
+                <div class="Text"><span class="Bowl">2017–2019</span>
+                    <span>Company Name / Location</span></div>
+
             </div>
-            <p class="job-description">
+            <p class="Text text-light-gray">
                 Lorem ipsum dolor sit amet, this is a theme consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
             </p>
-        </li>
-    </ul>
+        </div>
+
 </article>
 
 </div>
@@ -122,23 +142,23 @@
 
 <div class="row gx-5 justify-content-center">
     <div class="col-lg-4">
-        <div class="bg">
-            <h2><strong>Hobbies_</strong></h2>
-            <div class="row text-center hobbies">
+        <div class="bg text-black Hobby" >
+            <h2 class="Artic ">HOBBIES_</h2>
+            <div class="row pt-4 text-center Data">
                 <div class="col-3">
-                    <i class="bi bi-airplane"></i>
+                    <i class="fa-solid fa-route Icons"></i>
                     <p>Travel</p>
                 </div>
                 <div class="col-3">
-                    <i class="bi bi-music-note"></i>
+                    <i class="fa-solid fa-music Icons"></i>
                     <p>Music</p>
                 </div>
                 <div class="col-3">
-                    <i class="bi bi-vector-pen"></i>
+                    <i class="fa-solid fa-pen-nib Icons"></i>
                     <p>Writing</p>
                 </div>
                 <div class="col-3">
-                    <i class="bi bi-suit-club-fill"></i>
+                    <i class="fa-solid fa-chess Icons"></i>
                     <p>Chess</p>
                 </div>
             </div>
@@ -148,51 +168,93 @@
 
 
 
-<article class="col-lg-5 expertise-section ">
-    <h2><strong>Expertise_</strong></h2>
-    <div class="row gx-3">
-        <div class="col-3 expertise-item">
-            <div class="circle">
-                <svg>
-                    <circle cx="50%" cy="50%" r="45"></circle>
-                    <circle class="progress" cx="50%" cy="50%" r="45"></circle>
+<article class="col-lg-5 ">
+    <h2 class="Exp Artic text-black">EXPERTISE_</h2>
+    <div class="row gx-5 justify-content-center">
+        <div class="col-lg-3 col-md-6">
+
+
+                <svg width="200" height="200" xmlns="http://www.w3.org/2000/svg">
+
+                    <circle class="circle third-circle" cx="100" cy="100" r="70" />
+
+                    <circle class="circle second-circle rotate-variant-02 " cx="100" cy="100" r="70" />
+
+                    <circle class="circle first-circle rotate-variant-01" cx="100" cy="100" r="70" />
+                    <text x="100" y="90" text-anchor="middle" class="Data">
+                        <tspan x="100" dy="0" >Adobe</tspan>
+                        <tspan x="100" dy="20" >Photoshop</tspan>
+                    </text>
                 </svg>
-                <p>Adobe Photoshop</p>
-            </div>
+
+
         </div>
-        <div class="col-3 expertise-item">
-            <div class="circle">
-                <svg>
-                    <circle cx="50%" cy="50%" r="45"></circle>
-                    <circle class="progress" cx="50%" cy="50%" r="45"></circle>
+        <div class="col-lg-3 col-md-6">
+
+
+                <svg width="200" height="200" xmlns="http://www.w3.org/2000/svg">
+
+                    <circle class="circle third-circle" cx="100" cy="100" r="70" />
+
+                    <circle class="circle second-circle rotate-variant-12 " cx="100" cy="100" r="70" />
+
+                    <circle class="circle first-circle rotate-variant-11" cx="100" cy="100" r="70" />
+                    <text x="100" y="90" text-anchor="middle" class="Data">
+                        <tspan x="100" dy="0" >Adobe</tspan>
+                        <tspan x="100" dy="20" >Illustrator</tspan>
+                    </text>
                 </svg>
-                <p>Adobe Illustrator</p>
-            </div>
+
+
         </div>
-        <div class="col-3 expertise-item">
-            <div class="circle">
-                <svg>
-                    <circle cx="50%" cy="50%" r="45"></circle>
-                    <circle class="progress" cx="50%" cy="50%" r="45"></circle>
+        <div class="col-lg-3 col-md-6">
+
+
+                <svg width="200" height="200" xmlns="http://www.w3.org/2000/svg">
+
+                    <circle class="circle third-circle" cx="100" cy="100" r="70" />
+
+                    <circle class="circle second-circle rotate-variant-22 " cx="100" cy="100" r="70" />
+
+                    <circle class="circle first-circle rotate-variant-21" cx="100" cy="100" r="70" />
+                    <text x="100" y="90" text-anchor="middle" class="Data">
+                        <tspan x="100" dy="0" >Adobe</tspan>
+                        <tspan x="100" dy="20" >Indesign</tspan>
+                    </text>
                 </svg>
-                <p>Adobe Indesign</p>
-            </div>
+
+
         </div>
-        <div class="col-3 expertise-item">
-            <div class="circle">
-                <svg>
-                    <circle cx="50%" cy="50%" r="45"></circle>
-                    <circle class="progress" cx="50%" cy="50%" r="45"></circle>
+        <div class="col-lg-3 col-md-6">
+
+
+                <svg width="200" height="200" xmlns="http://www.w3.org/2000/svg">
+
+                    <circle class="circle third-circle" cx="100" cy="100" r="70" />
+
+                    <circle class="circle second-circle rotate-variant-32 " cx="100" cy="100" r="70" />
+
+                    <circle class="circle first-circle rotate-variant-31" cx="100" cy="100" r="70" />
+                    <text x="100" y="90" text-anchor="middle" class="Data">
+                        <tspan x="100" dy="0" >Power</tspan>
+                        <tspan x="100" dy="20" >Point</tspan>
+                    </text>
                 </svg>
-                <p>Power Point</p>
-            </div>
+
+
         </div>
+
     </div>
+
 </article>
+
 
 
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+
+
+
 </body>
 </html>
