--- a/app/index.html
+++ b/app/index.html
@@ -2,59 +2,100 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hu Tao THE BEST!!!!</title>
+    <title>Lab </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="shortcut icon" href ="https://i.redd.it/6nqh27dio1rb1.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.css">
 
 
 
 </head>
-<body class="block ">
+<body class="container-fluid" style="padding-left: 4px">
 
 <div class="row gx-5 justify-content-center">
-    <!-- Колонка с изображением -->
-    <section class="col-lg-4 col-md-5 col-sm-12">
-        <div class="Pic YelBG">
+
+<div class="col" style="padding-left: 148px; max-width: 882px">
+
+    <section class="row">
+        <div class="col">
+            <div class="Pic YelBG">
             <img src="images/image01.png" alt="Hello World from Space ">
+        </div></div>
+
+</section>
+    <div class="row">
+        <div class="col">
+        <div class="Exp bg ">
+            <h2 class=" Artic text-black">ABOUT ME_</h2>
+            <div class="Text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo.
+            </div>
         </div>
-    </section>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+        <div class=" Exp bg text-black Hobby " id="last-block" >
+            <h2 class="Artic ">HOBBIES_</h2>
+            <div class="row pt-4 text-center Data">
+                <div class="col">
+                    <i class="fa-solid fa-route Icons"></i>
+                    <p>Travel</p>
+                </div>
+                <div class="col">
+                    <i class="fa-solid fa-music Icons"></i>
+                    <p>Music</p>
+                </div>
+                <div class="col">
+                    <i class="fa-solid fa-pen-nib Icons"></i>
+                    <p>Writing</p>
+                </div>
+                <div class="col">
+                    <i class="fa-solid fa-chess Icons"></i>
+                    <p>Chess</p>
+                </div>
+            </div>
+        </div>
+        </div>
+    </div>
+</div>
 
+    <div class="col" style="padding-right: 148px" >
 
-       <div class="col-lg-5 col-md-7 col-sm-12 ">
-           <div class =" row gy-lg-4 gy-md-4 gy-sm-4">
-
-
-
-           <header class="col-12 header-content pt-5 pb-lg-5 pb-md-3 text-black">
-               <h1>JHON <br> <strong>ABIRAR</strong></h1>
+        <div class="row " style="padding-top:200px;padding-left: 58px ">
+           <header class="col text-black ">
+               <h1><span class="HeadFont1">JHON</span> <br> <span class="HeadFont2">ABIRAR</span></h1>
                <hr class="yellow-line">
-               <span class="Data">UI DESIGNER</span>
+               <span class="Data Header3">UI DESIGNER</span>
            </header>
+        </div>
 
 
 
-           <article class="col-12 pb-lg-5 pb-md-3">
+
+
+        <div class="row ">
+           <article class="col pb-sm-2 ">
                <h2 class="Artic text-black">CONTACT INFO_</h2>
 
                <div class="row gx-5 pt-3 Data">
-                   <div class="col-md-4">
+                   <div class="col-md-4 col-sm-3">
 
                        <span class="text-black"><strong>PHONE</strong></span>
                        <div class="pt-1">+000 132 456 789</div>
 
                    </div>
-                   <div class="col-md-4 ">
+                   <div class="col">
 
                        <span class="text-black"><strong>EMAIL</strong></span>
                        <div class="pt-1 ">uname<wbr>@gmail.com</div>
 
                    </div>
-                   <div class="col-md-4">
+                   <div class="col">
 
                        <span class="text-black"><strong>AREA</strong></span>
                        <div class="pt-1">Your Street Address Here</div>
@@ -62,12 +103,13 @@
                    </div>
                </div>
            </article>
+        </div>
 
-
-           <article class="col-12 pb-lg-5 pb-md-3 pb-sm-2">
+        <div class="row ">
+           <article class="col pb-sm-2 ">
                <h2 class="Artic text-black">EDUCATION_</h2>
                <div class="row gx-5 pt-3">
-                   <div class="col-md-6 Data text-dark-gray">
+                   <div class="col Data text-dark-gray">
                        <span ><strong>ENTER YOUR MAJOR</strong></span><br>
                        <div class="pt-2">
                            <span >Name Of Your University</span> <br>
@@ -75,7 +117,7 @@
                        </div>
 
                    </div>
-                   <div class="col-md-6 Data text-dark-gray">
+                   <div class="col Data text-dark-gray">
                        <span ><strong>ENTER YOUR MAJOR</strong></span><br>
                        <div class="pt-2">
                           <span >Name Of Your University</span><br>
@@ -86,173 +128,112 @@
                    </div>
                </div>
            </article>
+        </div>
+
+        <article class="col">
+            <h2 class="Exp Artic text-black">EXPERIENCE_</h2>
+
+            <div class="job-item col">
+                <div >
+                    <h4 class="text-dark-gray">Enter Job Position Here</h4>
+                    <div class="Text"><span class="Bowl">Present</span>
+
+                        <span class="job-company">Company Name / Location</span></div>
+
+                </div>
+                <p class="Text text-light-gray">
+                    Lorem ipsum dolor sit amet, this is a theme consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
+                </p>
+            </div>
+            <div class="job-item">
+                <div class="job-header">
+                    <h4 class="text-dark-gray">Enter Job Position Here</h4>
+                    <div class="Text"><span class="Bowl">2017–2019</span>
+                        <span>Company Name / Location</span></div>
+
+                </div>
+                <p class="Text text-light-gray">
+                    Lorem ipsum dolor sit amet, this is a theme consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
+                </p>
+            </div>
+
+        </article>
+        <article class="col ">
+            <h2 class="Exp Artic text-black">EXPERTISE_</h2>
+            <div class="row gx-5 gy-4 ">
+                <div class="col">
+
+                    <svg  width="140" height="140"
+                          xmlns="http://www.w3.org/2000/svg">
+
+                        <circle class="circle third-circle" cx="50%" cy="50%" r="60" />
+
+                        <circle class="circle second-circle animated-circle rotate-variant-02 " cx="50%" cy="50%" r="60" />
+
+                        <circle class="circle first-circle animated-circle rotate-variant-01" cx="50%" cy="50%" r="60" />
+                        <text x="50%" y="45%" text-anchor="middle" class="Data">
+                            <tspan x="50%" dy="0%" >Adobe</tspan>
+                            <tspan x="50%" dy="10%" >Photoshop</tspan>
+                        </text>
+                    </svg>
+
+                </div>
+                <div class="col ">
+
+                    <svg width="140" height="140" xmlns="http://www.w3.org/2000/svg">
+
+                        <circle class="circle third-circle" cx="50%" cy="50%" r="60" />
+
+                        <circle class="circle second-circle animated-circle rotate-variant-12 " cx="50%" cy="50%" r="60" />
+
+                        <circle class="circle first-circle animated-circle rotate-variant-11" cx="50%" cy="50%" r="60" />
+                        <text x="50%" y="45%" text-anchor="middle" class="Data">
+                            <tspan x="50%" dy="0%" >Adobe</tspan>
+                            <tspan x="50%" dy="10%" >Illustrator</tspan>
+                        </text>
+                    </svg>
+
+                </div>
+                <div class="col">
+
+                    <svg width="140" height="140" xmlns="http://www.w3.org/2000/svg">
+
+                        <circle class="circle third-circle" cx="50%" cy="50%" r="60" />
+
+                        <circle class="circle second-circle animated-circle rotate-variant-22 " cx="50%" cy="50%" r="60" />
+
+                        <circle class="circle first-circle animated-circle rotate-variant-21" cx="50%" cy="50%" r="60" />
+                        <text x="50%" y="45%" text-anchor="middle" class="Data">
+                            <tspan x="50%" dy="0%" >Adobe</tspan>
+                            <tspan x="50%" dy="10%" >Indesign</tspan>
+                        </text>
+                    </svg>
+
+                </div>
+                <div class="col">
+
+                    <svg width="140" height="140" xmlns="http://www.w3.org/2000/svg">
+
+                        <circle class="circle third-circle" cx="50%" cy="50%" r="60" />
+
+                        <circle class="circle second-circle animated-circle rotate-variant-32 " cx="50%" cy="50%" r="60" />
+
+                        <circle class="circle first-circle animated-circle rotate-variant-31" cx="50%" cy="50%" r="60" />
+                        <text x="50%" y="45%" text-anchor="middle" class="Data">
+                            <tspan x="50%" dy="0%" >Power</tspan>
+                            <tspan x="50%" dy="10%" >Point</tspan>
+                        </text>
+                    </svg>
+
+                </div>
 
 
-       </div>
+            </div>
 
+        </article>
    </div>
 
 </div>
-
-
-
-<div class ="row  gx-5 justify-content-center">
-
-    <div class="col-lg-4">
-        <div class=" bg">
-            <h2 class="Artic text-black">ABOUT ME_</h2>
-            <div class="Text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo.
-            </div>
-        </div>
-    </div>
-
-
-    <article class="col-lg-5">
-    <h2 class="Exp Artic text-black">EXPERIENCE_</h2>
-
-        <div class="job-item col-lg">
-            <div >
-                <h4 class="text-dark-gray">Enter Job Position Here</h4>
-                <div class="Text"><span class="Bowl">Present</span>
-
-                    <span class="job-company">Company Name / Location</span></div>
-
-            </div>
-            <p class="Text text-light-gray">
-                Lorem ipsum dolor sit amet, this is a theme consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
-            </p>
-        </div>
-        <div class="job-item">
-            <div class="job-header">
-                <h4 class="text-dark-gray">Enter Job Position Here</h4>
-                <div class="Text"><span class="Bowl">2017–2019</span>
-                    <span>Company Name / Location</span></div>
-
-            </div>
-            <p class="Text text-light-gray">
-                Lorem ipsum dolor sit amet, this is a theme consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
-            </p>
-        </div>
-
-</article>
-
-</div>
-
-
-<div class="row gx-5 justify-content-center">
-    <div class="col-lg-4">
-        <div class="bg text-black Hobby" >
-            <h2 class="Artic ">HOBBIES_</h2>
-            <div class="row pt-4 text-center Data">
-                <div class="col-3">
-                    <i class="fa-solid fa-route Icons"></i>
-                    <p>Travel</p>
-                </div>
-                <div class="col-3">
-                    <i class="fa-solid fa-music Icons"></i>
-                    <p>Music</p>
-                </div>
-                <div class="col-3">
-                    <i class="fa-solid fa-pen-nib Icons"></i>
-                    <p>Writing</p>
-                </div>
-                <div class="col-3">
-                    <i class="fa-solid fa-chess Icons"></i>
-                    <p>Chess</p>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
-
-
-<article class="col-lg-5 ">
-    <h2 class="Exp Artic text-black">EXPERTISE_</h2>
-    <div class="row gx-5 justify-content-center">
-        <div class="col-lg-3 col-md-6">
-
-
-                <svg width="200" height="200" xmlns="http://www.w3.org/2000/svg">
-
-                    <circle class="circle third-circle" cx="100" cy="100" r="70" />
-
-                    <circle class="circle second-circle rotate-variant-02 " cx="100" cy="100" r="70" />
-
-                    <circle class="circle first-circle rotate-variant-01" cx="100" cy="100" r="70" />
-                    <text x="100" y="90" text-anchor="middle" class="Data">
-                        <tspan x="100" dy="0" >Adobe</tspan>
-                        <tspan x="100" dy="20" >Photoshop</tspan>
-                    </text>
-                </svg>
-
-
-        </div>
-        <div class="col-lg-3 col-md-6">
-
-
-                <svg width="200" height="200" xmlns="http://www.w3.org/2000/svg">
-
-                    <circle class="circle third-circle" cx="100" cy="100" r="70" />
-
-                    <circle class="circle second-circle rotate-variant-12 " cx="100" cy="100" r="70" />
-
-                    <circle class="circle first-circle rotate-variant-11" cx="100" cy="100" r="70" />
-                    <text x="100" y="90" text-anchor="middle" class="Data">
-                        <tspan x="100" dy="0" >Adobe</tspan>
-                        <tspan x="100" dy="20" >Illustrator</tspan>
-                    </text>
-                </svg>
-
-
-        </div>
-        <div class="col-lg-3 col-md-6">
-
-
-                <svg width="200" height="200" xmlns="http://www.w3.org/2000/svg">
-
-                    <circle class="circle third-circle" cx="100" cy="100" r="70" />
-
-                    <circle class="circle second-circle rotate-variant-22 " cx="100" cy="100" r="70" />
-
-                    <circle class="circle first-circle rotate-variant-21" cx="100" cy="100" r="70" />
-                    <text x="100" y="90" text-anchor="middle" class="Data">
-                        <tspan x="100" dy="0" >Adobe</tspan>
-                        <tspan x="100" dy="20" >Indesign</tspan>
-                    </text>
-                </svg>
-
-
-        </div>
-        <div class="col-lg-3 col-md-6">
-
-
-                <svg width="200" height="200" xmlns="http://www.w3.org/2000/svg">
-
-                    <circle class="circle third-circle" cx="100" cy="100" r="70" />
-
-                    <circle class="circle second-circle rotate-variant-32 " cx="100" cy="100" r="70" />
-
-                    <circle class="circle first-circle rotate-variant-31" cx="100" cy="100" r="70" />
-                    <text x="100" y="90" text-anchor="middle" class="Data">
-                        <tspan x="100" dy="0" >Power</tspan>
-                        <tspan x="100" dy="20" >Point</tspan>
-                    </text>
-                </svg>
-
-
-        </div>
-
-    </div>
-
-</article>
-
-
-
-</div>
-
-
 
 
 
